csc416/assignment_6/tests/fail/syntaxerrors/1/Error2.ram15.ram
class Error2 {
	public static void main() {
		// Uh oh
	}
}
